# refactoring_in_practice

./: README.md  pyproject.toml  requirements.txt  test_wordcount.py  wordcount.py
.github/workflows/: ci.yaml
