[tool.poetry]
name = "refactoring_in_practice"
version = "0.1.0"
description = "Pacote com o desenrolar das aulas sobre Refatoração na Prática"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
